--- a/dependabot.yml
+++ b/dependabot.yml
@@ -8,6 +8,4 @@ updates:
       interval: "weekly"
     # Add reviewers
     reviewers:
-      - "octocat"
-      - "my-username"
-      - "my-org/python-team"
+      - "skruthara/devteam"
