--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
     # Add reviewers
     reviewers:
       - "skruthara/devteam"
-  - package-ecosystem: "cran"
+  - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "daily"
